# broca_llama_bench_lab

./: .env  .gitattributes  .gitignore  AGENTS.md  Makefile  NEXTSTEPS.md  README.md  REFACTOR_NOTES.md  clean.sh  docker-compose.yml  pyproject.toml  requirements-benchmark.txt  requirements-tui.txt  requirements.txt
asi_broca_core/: __init__.py  active_inference.py  broca.py  causal.py  causal_discovery.py  chat_cli.py  chunking.py  conformal.py  continuous_frame.py  demo.py  experiments.py  grafts.py  hawkes.py  hf_tokenizer_compat.py  hopfield.py  host.py  llama_broca_host.py  logging_setup.py  memory.py  motor_learning.py  native_tools.py  ontological_expansion.py  predictive_coding.py  preference_learning.py  substrate_graph.py  tokenizer.py  vision.py  vsa.py
asi_broca_core/benchmarks/: __main__.py  architecture_eval.py  hf_datasets_eval.py  (+1 more)
core/: __init__.py  __main__.py  active_inference.py  bench_tui.py  broca.py  causal.py  causal_discovery.py  chat_cli.py  chat_tui.py  chunking.py  cli.py  conformal.py  continuous_frame.py  demo.py  device_utils.py  docker_sandbox.py  docker_self_improve_worker.py  dynamic_grafts.py  experiments.py  grafts.py  hawkes.py  hf_tokenizer_compat.py  hopfield.py  host.py  llama_broca_host.py  logging_setup.py  main.py  memory.py  motor_learning.py  native_tools.py  ontological_expansion.py  predictive_coding.py  preference_learning.py  substrate_graph.py  substrate_runtime.py  tokenizer.py  top_down_control.py  vision.py  vsa.py
paper/: main.bbl  main.blg  main.tex  references.bib
research_lab/: __init__.py  demo.py
runs/: .gitkeep
tests/: conftest.py  test_affect_trace.py  test_alignment_registry.py  test_architecture_eval.py  test_broca.py  test_broca_snapshot.py  test_causal_discovery.py  test_causal_sampling.py  test_chunking.py  test_classification_encoder.py  test_conformal.py  test_continuous_frame.py  test_cross_model_alignment.py  test_derived_strength.py  test_docker_sandbox.py  test_docker_self_improve_worker.py  test_dynamic_grafts.py  test_encoder_integration.py  test_encoder_relation_extractor.py  test_encoder_swm_publisher.py  test_event_bus.py  test_faculties.py  test_graft_substrate_scale.py  test_hawkes.py  test_hf_datasets_eval.py  test_hopfield.py  test_hypothesis_synthesizer.py  test_intent_gate.py  test_jl_projection.py  test_latent_decoder.py  test_llama_broca_host.py  test_memory_layers.py  test_motor_learning.py  test_multimodal_perception_wiring.py  test_native_tools.py  test_ontological_expansion.py  test_organ_integration.py  test_organ_relation_extractor.py  test_paper_harness.py  test_prediction_error_vector.py  (+23 more)
(+329 files in other folders)
