
[project]
name = "asi-broca-llama-bench-lab"
version = "0.5.0"
description = "LLM-as-Broca neurosymbolic architecture with Llama 3.2 and HuggingFace datasets benchmarks"
requires-python = ">=3.10"
dependencies = ["torch>=2.1", "numpy>=1.24"]

[project.optional-dependencies]
benchmark = ["transformers>=4.45.0", "datasets>=2.19.0", "accelerate>=0.33.0", "sentencepiece>=0.2.0", "protobuf>=4.25.0", "lm-eval>=0.4.4"]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
