[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.5.0"
description = "LLM-as-Broca neurosymbolic architecture with Llama 3.2 and HuggingFace datasets benchmarks"
requires-python = ">=3.11"
dependencies = ["torch>=2.11.0", "numpy>=2.4.4"]

[project.scripts]
mosaic = "core.main:main"

[project.optional-dependencies]
benchmark = [
    "transformers>=5.7.0",
    "datasets>=4.8.5",
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.1",
    "lm-eval>=0.4.11",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]
test = ["pytest>=8.0"]
tui = [
    "textual>=8.2.5",
    "mosaic[benchmark]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
